--- a/acknowledgments.tex
+++ b/acknowledgments.tex
@@ -5,7 +5,10 @@
 \section{Acknowledgments}
 \label{section:acknowledgments}
 
-This work was supported by the U.S. Department of Energy, Office of Science,
+We are extremely grateful to four anonymous reviewers who provided detailed and
+insightful comments on our initial submission, which resulted in a
+greatly improved presentation and deeper conclusions.
+
+This work was supported by \doubleblind{the U.S. Department of Energy, Office of Science,
 Office of Advanced Scientific Computing Research, program managers Robinson Pino
-and Lucy Nowell, under contract number DE-AC05-00OR22725. \fix{Add any additional
-funding acknowledgements}
+and Lucy Nowell, under contract number DE-AC05-00OR22725.}{doubleblind}
