--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,7 @@ Kaplan-Meier survival, Cox regression
 %%%%%%%%%%%%%%%%%
 % Acknowledgments
 %%%%%%%%%%%%%%%%%
-\doubleblind{\input{acknowledgments}}{}
+\input{acknowledgments}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % References
