--- a/refs.bib
+++ b/refs.bib
@@ -397,3 +397,12 @@
     note = {R package version 0.4.6},
     url = {https://CRAN.R-project.org/package=survminer},
 }
+
+@article{Hernn2010TheHO,
+  title={The hazards of hazard ratios.},
+  author={Miguel A. Hern{\'a}n},
+  journal={Epidemiology},
+  year={2010},
+  volume={21 1},
+  pages={13-15}
+}
