--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -243,6 +243,7 @@ clarifications. See suggestions below:
   * *George: Done*
 - Figure 5: Despite the fact that data are random, I would order the
   Y-axis based on location (c0-c24)
+  * *George: Done*
 - Figures 5 and 6: Since the article has room, I would expand a little
   bit in the Y-axis Figure 5 and 6 to allow clarify the location and
   SN raw data. Also, why 60 entries in Fig. 5 and 80 entries in
@@ -250,12 +251,14 @@ clarifications. See suggestions below:
   number? E.g. for location, 80 corresponds to 1/X of the total, or
   something like that? Just a way to guide the user who would like to
   apply this visualization to their own data.
-  * *We missed correcting the 80 in the text as we tried to float the
-    figure to the right place.*
+  * *George: They're both 60. We missed correcting the 80 in the text as we
+    tried to latex-float the figure to the right place.*
 - Figures 5 and 6: There are lines that do not finish with ], OTB or
   DBE events. They just end. Example: 0323812005773 in fig. 5. Is that
   because they were part of another board in which something went
   wrong but they are in reality ok and can be reused?
+  * *George: Yes. That particular GPU was in 3 locations and still
+    operating at the end. It's life is "censored".*
 - Figure 7: If you look closely at Fig. 7 we can see it does not have
   the bars exactly aligned in the X-axis. Any main reason for that? It
   would be helpful to report data in two-columns rather than in just
@@ -264,8 +267,10 @@ clarifications. See suggestions below:
   use more bars (e.g. 2 weeks) and see the differences in the peaks. 2
   weeks is also more intuitive (= half a month, can be space between
   maintenance periods, etc.)
+  * *Rizwan: Also, converting to years as units would be more
+    interpretable.* 
 
-### Typographical errors: *Done except for reference*
+### Typographical errors:
 1. pp. 1, Sec. I, col 2: “desctibed” -> “described”;
 2. pp. 1, Sec. I, col 2: “wheras” -> “whereas”;
 3. pp. 2, Sec. II, col 1: “d0 not” -> “do not”;
@@ -275,19 +280,25 @@ clarifications. See suggestions below:
 7. pp. 9, Sec. VI, col 1: “mot” -> “not”; 
 8. pp. 9, Sec. VI, col 2: “[?]” -> “[Missing reference]”; 
 9. pp. 10, Sec. VII, col 1: “Saparating” -> “Separating”.
+   * *George: All done.*
 
 ### Other:
 1. the acronym “(NCSA)” is included but never used. Please review that
    all the acronyms are used and if not delete them;
+   * *George: removed. Do we mark it with strikethrough?*
 2. the acronym “(SN)” is included but figures 5 & 6 (and the text in
    page 5) use “sn” instead. Would be good to use the acronym instead;
+   * *George: done.*
 3. the acronym of Survival Analysis could be placed 4 lines before, at
    the moment of the 1st reference to it.
+   * *George: done.*
 4. Try to follow conventions for references to figures, i.e. beginning
    of sentence “Figure X”, in the text “Fig. X”, for instance, revisit
    reference to “Figure 4” in page 3 and “Figure 7” in page 5.
+   * *George: done.*
 5. I did not find any acknowledgement section. Not sure if this is
    missing or side-effect of double-blind review.
+   * *George: partly revealed now.*
 
 ## Comments for Revision
 
