--- a/dataclean.tex
+++ b/dataclean.tex
@@ -48,8 +48,8 @@ proportion of time at the longest location, and the number of DBE or
 OTB events.
 
 To get some intuition for the GPU lifetimes on Titan, we give two
-views of 60 randomly selected GPUs (Figure~\ref{fig:gpuview}) and 80
-randomly selected locations (Figure~\ref{fig:locview}).
+views of 60 randomly selected GPUs (\rev{Fig.}~\ref{fig:gpuview}) and 80
+randomly selected locations (\rev{Fig.}~\ref{fig:locview}).
 The GPU view
 visually documents the life of each GPU unit: when it was installed and
 removed at various locations, its DBE and OTB events, and the last
