--- a/survival.tex
+++ b/survival.tex
@@ -68,7 +68,7 @@ a GPU fails by duration $t$. The survival function is its complement
 It is the probability of being operational at duration $t$.  We use
 the R packages \pkg{survival} \cite{survival-package} and
 \pkg{survminer} \cite{survminer-package} for the KM analysis, which is
-reported in Figure~\ref{fig:km-all-cage-node}. Within each {\em
+reported in \rev{Fig.}~\ref{fig:km-all-cage-node}. Within each {\em
   batch}, separate survival curves are computed for each {\em cage} by
 {\em node} combination. Along with the survival curve estimate, this
 analysis provides 95\% confidence region for survival probability
@@ -92,7 +92,7 @@ shaded around the curves.
 It appears that transport of cooling air provides a complete
 explanation for relative differences in cage and node survival rates
 in the old batch.  We reach this conclusion with reference to
-Figure~\ref{fig:layout} and relative positions of cages and nodes
+\rev{Fig.}~\ref{fig:layout} and relative positions of cages and nodes
 within a cabinet. Both cage and node differences in survival
 probabilities can be explained by an inverse relationship with the
 distance to the bottom of the cabinet, where cooling air is forced
@@ -137,7 +137,7 @@ covariates do not cross. We ran these diagnostics and concluded that
 the hazards for our location categories are approximately
 proportional. However, survival functions partitioned on {\em batch}
 do cross and so we fit the model to the new and the old batches
-separately. The results are presented in Figures~\ref{fig:cox-old}
+separately. The results are presented in \rev{Fig.}~\ref{fig:cox-old}
 and~\ref{fig:cox-new}.
 
 We find that the average hazard ratios strongly correlate with
@@ -146,10 +146,10 @@ hazard ratios for each of the location variables, giving the ratio for
 each level compared to its first (0) level (consequently the 0 level
 is always 1). Due to the exponential nature of the CPH model, the
 horizontal hazard ratio axis is on a log scale. The estimates include
-uncertainty, which too is most reliably computed on a log scale (see,
-for example, \cite{Ostrouchov88}). In the figures, we also include the
-number of units, N, at risk and the number of events that occurred in
-each category.
+\rev{95\% confidence intervals}, which too \rev{are} most reliably
+computed on a log scale (see, for example, \cite{Ostrouchov88}). In
+the figures, we also include the number of units, N, at risk and the
+number of events that occurred in each category.
 
 All the factors ({\em col, row, cage, slot, node}) in the old batch
 are balanced with respect to the number of units at risk and
@@ -173,7 +173,7 @@ caution because it is a time averaged value on a log scale and suffers
 from the degrading balance mentioned in the previous paragraph. This
 aspect is not captured by the uncertainty, which accounts for the
 randomness of the failures and not for the geometric time averaging
-\cite{coxhazardinterpret}. Consequently, we interpret the pattern of
+\rev{\cite{Hernn2010TheHO}}. Consequently, we interpret the pattern of
 relative hazards rather than actual ratio magnitudes. More in-depth
 analysis with penalized estimation methods like \cite{bender2019} can
 take such balance issues in the exposure history into account and
