--- a/dataclean.tex
+++ b/dataclean.tex
@@ -3,7 +3,7 @@
 % Viewing and Cleaning the Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}[bt]
-  \includegraphics[width=6.5in]{figs/sample_sn.pdf}
+  \includegraphics[trim=0 7 0 5,clip,width=6.5in]{figs/sample_sn.pdf}
   \caption{Serial number view of GPU life and failures. Legend: black
     dots are installs, black lines are lifetimes at installed
     location, blue squares are OTB events, red triangles are DBE
@@ -11,7 +11,7 @@
   \label{fig:gpuview}
 \end{figure*}
 \begin{figure*}[tb]
-  \includegraphics[width=6.5in]{figs/sample_loc.pdf}
+  \includegraphics[trim=0 7 0 5,clip,width=6.5in]{figs/sample_loc.pdf}
   \caption{Location view of GPU life and failures.  Legend: black dots
     are installs, black lines are lifetimes at installed location,
     blue squares are OTB events, red triangles are DBE events, and
