--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,7 @@
 \makeatletter
 \newcommand\notsotiny{\@setfontsize\notsotiny\@vipt\@viipt}
 \makeatother
+\renewcommand{\pkg}[1]{\textsf{#1}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Document Body
