--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -76,11 +76,11 @@ VI.
   * *George: Done*
 - Fig. 12/13: I assume the figures show the mean and std (or median,
   Q1, Q3)?
-  * *George*
+  * *George: they are 95% confidence intervals around the mean on log scale.*
 - There is a reference missing on page 9 [?].
-  * *George*
+  * *George: added.*
 - Typo: “has mot” -> “has not”
-  * *George: Done*
+  * *George: Done.*
 
 VII.
 - Can you quantify how changing job scheduling improved productivity?
@@ -326,6 +326,18 @@ version:
   much effort can take the adapt the scripts to other HPC raw
   data. Section VI would benefit from some references related to
   studies of SA methods.
+  * *Architects don't always consider non-uniform airflow and
+    resulting impact on components. Leadership architectures (Summit,
+    Frontier) are already better. Smaller clusters don't have the
+    luxury of large number of units on test and consequently failures
+    appear random (wide confidence intervals and statistically not
+    significant).*
+	
+  *	*We are already discussin implementing some of these analyses and
+    visualizations for data from Summit and Frontier. We also have
+    better data collection implemented. (doubleblind this?)*
+	
+  * *Christian/Don/Jim: comment of user impact and core-hour refunds?*
 
 - It would be useful to emphasize more the novelty in this article. It
   seems that the main elements are the full lifetime data analysis and
@@ -342,6 +354,9 @@ version:
   with the current codes used? What are the current limitations of the
   codes (e.g. speed, ease of use, tutorial or guidelines to reproduce
   graphs) (if any) or dependencies with other software?
+  * *Figures 1, 2, 5, 6 are custom using R's ggplot2*
+	*Figures 11, 12, and 13 are customized variants from R packages
+    \pkg{survminer} and \pkg{forestmodel}, which also use ggplot2.*
 
 # Reviewer 4
 
@@ -363,6 +378,8 @@ version:
   I.e., for differences in col 0-11 from col 12-24, while there is the
   speculation of different flows or pressure, the authors also report
   temperature.
+  * *Looking for connection with torus foldover. Do we have
+    temperature data?*
 
 - The last part of the analysis seems written quickly, and could be
   better streamlined. There also are a few typos. The paper seems to
@@ -370,6 +387,8 @@ version:
   discussion. One question, given the facility involved in this
   retrospective, is if the analysis has influenced somehow the current
   and the upcoming (GPU based) systems.
+  * *Jim, Don: What are we taking to Summit and Frontier?*
+  * *Christian: add a Conclusions section?*
 
 
 ## Comments for Revision
@@ -379,3 +398,4 @@ version:
   to issues with airflow/temperature
 
 - Please see if it possible to provide a proper conclusion.
+* *See notes above in Detailed Comments*
