--- a/survival.tex
+++ b/survival.tex
@@ -11,9 +11,9 @@
 \end{figure*}
 \section{Survival Analysis}
 \label{section:survival}
-\renewcommand{\pkg}[1]{\textsf{#1}} Survival analysis (SA) methods
+Survival analysis (SA) methods
 \cite{survival-book}, 
-sometimes referred as time to event methods, focus on the effect of
+sometimes referred to as time to event methods, focus on the effect of
 the machine on the GPU units. These methods have roots in biomedical
 statistics, where the effect on the patient is most important. So here
 we treat the GPUs as patients to determine factors that contribute to
