--- a/intro.tex
+++ b/intro.tex
@@ -25,14 +25,14 @@ and contains the most reliable data on GPU operation.
 \begin{figure*}[tb]
   \centering
   \includegraphics[width=\textwidth]{figs/chronology001.pdf}
-  \caption{Volume of GPU swaps detected on Titan at individual
+  \caption{\rev{Volume of GPU swaps detected on Titan at individual
     inventories (narrow blue) and yealy sum totals for 2014 and later
     (wide gray) over its entire lifetime. High swap volumes prior to
     2014 reflect two major rework cycles on mechanical assembly issues
     at PCIe connectors that can be characterized as a break-in
     period. Our analysis in this paper excludes the break-in period
     and is focused on units in place by the end of 2013 or swapped in
-    during the years that follow.}
+    during the years that follow}.}
   \label{fig:chronology}
 \end{figure*}
 Figure~\ref{fig:chronology} illustrates the chronology of the rework
