talked around pre 2014 data

--- a/code/README
+++ b/code/README
@@ -1,6 +1,7 @@
 To run .Rmd file:
 
-Download and install R and RStudio.
+Download and install R 
+Download and install RStudio.
 Open the file with RStudio
 Click on Knit in the top left pane.
 Follow any prompts to install a number of packages.
