--- a/reviews/pap537.md
+++ b/reviews/pap537.md
@@ -1,5 +1,3 @@
-  * *Christian: makefile mod for pandoc?*
-
 # Reviewer 1
 
 ## Detailed Comments for Authors
@@ -12,9 +10,9 @@ Detailed comments:
 I.
 - What is meant with “data collection changes” and how are they
   responsible for GPU swaps? 
-  * *Don: can you elaborate on data collection prior to 2014?
-    ... especially regarding the full machine spike.*
-	*May 2013 acceptance?*
+  * *Don: Data prior to 2014 are not reliable because of two major
+    rework cycles as well as a large amount of experimentation in
+    solving mechanical assembly issues*
 - Rephrase the sentence: “TBF studies largely how…” -> “TBF studies
   largely show how…”
   * *George: Done*
